se agrego noticias-destacadas

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     <a href="articulo-2.html" target="_blank" rel="noopener noreferrer">
                         <li class="list-group-item">Escocia, rey del fútbol</li>
                     </a>
-                    <a href="articulos.html" target="_blank" rel="noopener noreferrer">
+                    <a href="articulo-3.html" target="_blank" rel="noopener noreferrer">
                         <li class="list-group-item">Memoria viva de Talleres de Remedios de Escalada </li>
                     </a>
                     <a href="articulos.html" target="_blank" rel="noopener noreferrer">
