se modificaron algunas cosas

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <div class="overlay">
                             <p>Noticias destacadas</p>
                             <div class="iconos-contenedor">
-                                <a href="https://www.tycsports.com/futbol-de-europa.html" target="_blank" rel="noopener noreferrer">
+                                <a href="noticias-destacadas.html" target="_blank" rel="noopener noreferrer">
                                     <i class="bi bi-hand-index"></i>
                                 </a>
                             </div>
