reorganice mis html

--- a/articulos/articulos.html
+++ b/articulos/articulos.html
@@ -8,7 +8,7 @@
     <!-- titulo -->
     <title>Historia del fútbol</title>
      <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <main class="historia-container">
