--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <div class="overlay">
                             <p>Noticias destacadas</p>
                             <div class="iconos-contenedor">
-                                <a href="noticias-destacadas.html" target="_blank" rel="noopener noreferrer">
+                                <a href="/noticias/noticias-destacadas.html" target="_blank" rel="noopener noreferrer">
                                     <i class="bi bi-hand-index"></i>
                                 </a>
                             </div>
@@ -216,28 +216,28 @@
                   Revive los momentos que marcaron la Historia del deporte rey
                 </div>
                 <ul class="list-group list-group-flush">
-                    <a href="articulo-1.html" target="_blank" rel="noopener noreferrer">
+                    <a href="/articulos/articulo-1.html" target="_blank" rel="noopener noreferrer">
                         <li class="list-group-item">El torneo de los 117 equipos y otras historias del fútbol en 1879
                         </li>
                     </a>
-                    <a href="articulo-2.html" target="_blank" rel="noopener noreferrer">
+                    <a href="/articulos/articulo-2.html" target="_blank" rel="noopener noreferrer">
                         <li class="list-group-item">Escocia, rey del fútbol</li>
                     </a>
-                    <a href="articulo-3.html" target="_blank" rel="noopener noreferrer">
+                    <a href="/articulos/articulo-3.html" target="_blank" rel="noopener noreferrer">
                         <li class="list-group-item">Memoria viva de Talleres de Remedios de Escalada </li>
                     </a>
-                    <a href="articulos.html" target="_blank" rel="noopener noreferrer">
+                    <a href="/articulos/articulo-4.html" target="_blank" rel="noopener noreferrer">
                         <li class="list-group-item">El tamaño de los arcos</li>
                     </a>
-                    <a href="articulos.html" target="_blank" rel="noopener noreferrer">
+                    <a href="/articulos/articulo-5.html" target="_blank" rel="noopener noreferrer">
                         <li class="list-group-item">¿Quién hubiera ganado el Balón de Oro en 1873?</li>
                     </a>
-                    <a href="articulos.html" target="_blank" rel="noopener noreferrer">
+                    <a href="/articulos/articulo-6.html" target="_blank" rel="noopener noreferrer">
                         <li class="list-group-item">¿CUÁL FUE EL PRIMER CAMPEÓN DE LA HISTORIA DEL FÚTBOL?</li>
                     </a>
                 </ul>
               </div>
-              <a href="articulos.html" target="_blank" rel="noopener noreferrer">
+              <a href="/articulos/articulos.html" target="_blank" rel="noopener noreferrer">
                 <button type="button" class="btn btn-info">
                     Ver mas articulos   
                     <i class="bi bi-arrow-right-circle-fill"></i>
@@ -262,7 +262,7 @@
                     <div class="carousel-item">
                       <div class="container">
                         <img class="iconicos-imagen" src="imagenes/mano-de-dios.jpg" alt="mano de dios maradona">
-                        <p class="testimonio-texto">Mano de Dios, Argentina vs Inglatella Mexico 1986.</p>
+                        <p class="testimonio-texto">Mano de Dios, Argentina vs Inglaterra Mexico 1986.</p>
                       </div>
                     </div>
                     <div class="carousel-item">
