--- a/articulos/articulo-2.html
+++ b/articulos/articulo-2.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
+     <!-- bootstraps -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+     <!-- inoconos de bootstrap -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+     <!-- CSS -->
+     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div class="contenedor-articulo">
@@ -28,6 +35,24 @@
             Además se jugaron seis amistosos internacionales. Los escoceses ganaron 5: Clydesdale 2 Sheffield 0;  Alexandra 1 Sheffield 0; Queen’s Park 5 Notts County 1; Queen’s Park 6 Wanderers London 0; y Queen’s Park 3 Cambridge 0. El único triunfo ingles fue en Wanderers London 2 Queen’s Park 0.
         </p>
     </div>
+    <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
+        <img class="footer-logo" src="/imagenes/icono-blanco.svg" alt="logo de portafolio">
+        <p class="footer-texto text-center">Aprendamos juntos sobre nuestro deporte favorito.</p>
+        <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
+          <a href="" target="_blank" rel="noopener noreferrer">
+             <i class="bi bi-twitter-x"></i>
+          </a>
+          <a href="" target="_blank" rel="noopener noreferrer">
+             <i class="bi bi-instagram"></i>
+          </a>
+          <a href="" target="_blank" rel="noopener noreferrer">
+             <i class="bi bi-facebook"></i>
+          </a>
+          <a href="mailto:janedoe@micorreo.com" target="_blank" rel="noopener noreferrer">
+             <i class="bi bi-envelope"></i>
+          </a>
+        </div>
+     </footer>
     
 </body>
 </html>
