--- a/articulos/articulo-3.html
+++ b/articulos/articulo-3.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
+     <!-- bootstraps -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+     <!-- inoconos de bootstrap -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+     <!-- CSS -->
+     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div class="contenedor-articulo">
@@ -19,27 +26,47 @@
             <img src="/articulos-imagenes/memoria-talleres.jpg" alt="Equipo Old Etonians en 1879" class="imagen">
             <div class="imagen-texto"></div>
         </div>
+        
         <p class="descripcion">
             Don Pablo Comelli es la historia viva de Talleres. Disponer de media tarde para compartirla con él, tomando café, equivale a conocer la trayectoria del medio siglo de vida del club de Remedios de Escalada, 
             que ha tenido muchos momentos de alegría dentro de nuestro fútbol. Memorizando, Comelli es cosa seria. No necesita recurrir a los documentos sino para confirmar alguna fecha. Pero cuando alguien duda, Comelli aclara: <br>
             —No... eso fue en el 15... La canchita estaba en diagonal con la primera, y de ahí viene la confusión, y lo de Paola sucedió ese mismo año. <br>
-— ¿Qué sucedió? <br>
+            — ¿Qué sucedió? <br>
 
-—Cosas de otros tiempos. Resulta que antes los jugadores eran socios del club, y debían abonar sus cuotas como todos. Paola, que era uno de los mejorcitos que teníamos, se había atrasado un par de meses. Teníamos que jugar un final de campeonato, pero resolvimos que si no pagaba no jugaba... <br>
+            —Cosas de otros tiempos. Resulta que antes los jugadores eran socios del club, y debían abonar sus cuotas como todos. Paola, que era uno de los mejorcitos que teníamos, se había atrasado un par de meses. Teníamos que jugar un final de campeonato, pero resolvimos que si no pagaba no jugaba... <br>
 
-— ¿Y pagó? <br>
+            — ¿Y pagó? <br>
 
-— ¡Cómo no! ¿Se iba a perder de jugar ese partido? <br>
+            — ¡Cómo no! ¿Se iba a perder de jugar ese partido? <br>
 
-— ¿Y cómo fué aquello de Cerrudo, Comelli, el hombre de tantas anécdotas pintorescas? <br>
+            — ¿Y cómo fué aquello de Cerrudo, Comelli, el hombre de tantas anécdotas pintorescas? <br>
 
- —Cerrudo jugó por Talleres hace unos 25 años. Tenía cosas de lo más raras. Una vez en Rosario lo mandaron a cambiar plata rosarina por plata argentina, y fue. Otra vez estaba en el cine y al comenzar una película apareció el león de la Metro. 
- Cerrudo pensó "ésta la vi", y se fue. Pero yo no me olvido de una tarde que vino al club a pedir dos mil pesos. Fue en el 33. Naturalmente, el tesorero le dijo que no tenía dinero y Cerrudo fué rebajando sus pretensiones... <br>
+             —Cerrudo jugó por Talleres hace unos 25 años. Tenía cosas de lo más raras. Una vez en Rosario lo mandaron a cambiar plata rosarina por plata argentina, y fue. Otra vez estaba en el cine y al comenzar una película apareció el león de la Metro. 
+            Cerrudo pensó "ésta la vi", y se fue. Pero yo no me olvido de una tarde que vino al club a pedir dos mil pesos. Fue en el 33. Naturalmente, el tesorero le dijo que no tenía dinero y Cerrudo fué rebajando sus pretensiones... <br>
 
-— ¿Se conformó con un cien? <br>
+            — ¿Se conformó con un cien? <br>
 
-— ¿Con un cien? ¡Ní eso! El tesorero le dijo que tenía sólo 5 pesos y que, además, eran falsos... Y Cerrudo, resignado pero alegre, le dijo: "Vengan esos falsos...."
+            — ¿Con un cien? ¡Ní eso! El tesorero le dijo que tenía sólo 5 pesos y que, además, eran falsos... Y Cerrudo, resignado pero alegre, le dijo: "Vengan esos falsos...."
         </p>
+     </div>
+        <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
+            <img class="footer-logo" src="/imagenes/icono-blanco.svg" alt="logo de portafolio">
+            <p class="footer-texto text-center">Aprendamos juntos sobre nuestro deporte favorito.</p>
+            <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
+              <a href="" target="_blank" rel="noopener noreferrer">
+                 <i class="bi bi-twitter-x"></i>
+              </a>
+              <a href="" target="_blank" rel="noopener noreferrer">
+                 <i class="bi bi-instagram"></i>
+              </a>
+              <a href="" target="_blank" rel="noopener noreferrer">
+                 <i class="bi bi-facebook"></i>
+              </a>
+              <a href="mailto:janedoe@micorreo.com" target="_blank" rel="noopener noreferrer">
+                 <i class="bi bi-envelope"></i>
+              </a>
+            </div>
+         </footer>
     
 </body>
 </html>
