se cambio la descripcion

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- metadatos -->
     <meta charset="UTF-8">
     <meta name="author" content="ulise rivero">
-    <meta name="description" content="">
+    <meta name="description" content="proyecto coder">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- titulo -->
     <title>Todo futbol | todo el tiempo</title>
