--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- metadatos -->
     <meta charset="UTF-8">
     <meta name="author" content="ulise rivero">
-    <meta name="description" content="proyecto coder">
+    <meta name="description" content=""Descubre los últimos resultados y noticias de las mejores ligas. Todo sobre tu equipo favorito en nuestro blog de fútbol."">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- titulo -->
     <title>Todo futbol | todo el tiempo</title>
@@ -80,7 +80,7 @@
            <div class="columna col-12 col-md-4">
             <i class="bi bi-laptop"></i>
             <p class="experiencia-titulo">Análisis de partidos</p>
-            <p>Descube analisis detallados de los partidos más importantes, estadísticas clave y oponiones de los momentos decisivos que definen el futbol.</p>
+            <p>Descube analisis detallados de los partidos más importantes, estadísticas clave y opiniones de los momentos decisivos que definen el futbol.</p>
              <div class="badges-contenedor">
                 <span class="badge text-bg-primary">Tacticas</span>
                 <span class="badge text-bg-primary">Estrategias</span>
